turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: not found: value colors
  setCouleurBrosse(colors(c));baisseBrosse();leveBrosse()
                   ^